fix: refactoring the sos-post query API
