# pkg/docs/swagger.json
@@ -169,8 +169,14 @@
                 "tags": [
                     "posts"
                 ],
-                "summary": "전체 돌봄급구 게시글을 조회합니다.",
+                "summary": "돌봄급구 게시글을 조회합니다.",
                 "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "작성자 ID",
+                        "name": "authorID",
+                        "in": "query"
+                    },
                     {
                         "type": "integer",
                         "default": 1,
@@ -270,49 +276,6 @@
                         "description": "Created",
                         "schema": {
                             "$ref": "#/definitions/sos_post.WriteSosPostResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/posts/sos/author": {
-            "get": {
-                "security": [
-                    {
-                        "FirebaseAuth": []
-                    }
-                ],
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "posts"
-                ],
-                "summary": "작성자 ID로 돌봄급구 게시글을 조회합니다.",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "default": 1,
-                        "description": "페이지 번호",
-                        "name": "page",
-                        "in": "query"
-                    },
-                    {
-                        "type": "integer",
-                        "default": 20,
-                        "description": "페이지 사이즈",
-                        "name": "size",
-                        "in": "query"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/commonviews.PaginatedView-sos_post_FindSosPostResponse"
                         }
                     }
                 }
